--- a/client/src/app/modules/administration/components/provider/provider.component.html
+++ b/client/src/app/modules/administration/components/provider/provider.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z2 form-div">
+<div class="mat-elevation-z2 form-div" *ngIf="!idProvider">
   <div>
     <mat-form-field class="full-width">
       <input matInput (keyup)="applyFilter($event.target)" placeholder="Rechercher">
