--- a/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
+++ b/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
@@ -198,7 +198,7 @@
               Acompte n°{{deposit.id}} - {{deposit.label}} (<span class="pointer"
                 (click)="movePayment(deposit)">déplacer</span>) - <mat-icon color="accent"
                 (click)="openPaymentDialog(deposit)" matTooltip="Voir le détail du paiement" color="accent"
-                class="pointer ">visibility</mat-icon> - {{deposit.label}}
+                class="pointer">visibility</mat-icon>
             </td>
             <td class="mat-mdc-cell mdc-data-table__cell  td-price ">
               - {{deposit.paymentAmount|number}} €
