--- a/client/src/app/modules/quotation/components/formalite/formalite.component.html
+++ b/client/src/app/modules/quotation/components/formalite/formalite.component.html
@@ -11,7 +11,7 @@
                 [isDisabled]="!editMode" label="Fournisseur de service"></autocomplete-competent-authority>
             </td>
             <td
-              *ngIf="formalite.competentAuthorityServiceProvider && formalite.competentAuthorityServiceProvider.id == competentAuthorityInpi.id">
+              *ngIf="formalite.competentAuthorityServiceProvider && formalite.competentAuthorityServiceProvider.id == competentAuthorityInpi.id && formalite.id">
               <chips-formalite-guichet-unique [(model)]="formalite.formalitesGuichetUnique" [form]="formaliteForm"
                 propertyName="formaliteGuichetUnique" [isMandatory]="false" label="Nom du dossier GU"
                 [isDisabled]="!editMode"></chips-formalite-guichet-unique>
