--- a/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.css
+++ b/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.css
@@ -4,8 +4,16 @@
 }
 
 .affaire {
-  font-weight: 600;
+  font-weight: 900;
   padding-top: 15px;
+}
+
+.affaire-align {
+  text-align: center;
+}
+
+.invoice-item {
+  padding-left: 20px;
 }
 
 table {
