--- a/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
+++ b/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
@@ -89,11 +89,11 @@
         </thead>
         <ng-container *ngFor="let asso of quotation.assoAffaireOrders;let indexAsso = index">
           <tr class="mat-mdc-row mdc-data-table__row ">
-            <td class="mat-mdc-cell mdc-data-table__cell  affaire " colspan="2"
+            <td class="mat-mdc-cell mdc-data-table__cell  affaire affaire-align " colspan="2"
               *ngIf="asso.affaire && asso.affaire.denomination">
               {{asso.affaire.denomination}}
             </td>
-            <td class="mat-mdc-cell mdc-data-table__cell  affaire " colspan="2"
+            <td class="mat-mdc-cell mdc-data-table__cell  affaire affaire-align " colspan="2"
               *ngIf="asso.affaire && asso.affaire.firstname">
               {{asso.affaire.firstname}} - {{asso.affaire.lastname}} -
             </td>
@@ -106,15 +106,15 @@
             </tr>
             <ng-container *ngFor="let invoiceItem of provision.invoiceItems;let indexInvoiceItem = index">
               <tr class="mat-mdc-row mdc-data-table__row ">
-                <td class="mat-mdc-cell mdc-data-table__cell ">
-                  {{invoiceItem.label}} <mat-icon color="accent" inline="true"
-                    [matTooltip]="invoiceItem.isGifted?'Ne plus offrir cette ligne de facturation':'Offrir cette ligne de facturation'"
-                    *ngIf="editMode && !getLetteringDate(invoiceItem.invoice)" class="info-icon pointer"
-                    (click)="toggleIsGifTed(invoiceItem)">redeem</mat-icon>
-                  <mat-icon color="accent" inline="true"
-                    matTooltip="Veuillez enregistrer pour pouvoir modifier le prix appliqué"
-                    *ngIf="editMode && invoiceItem.billingItem.billingType.canOverridePrice==true && !invoiceItem.id && !invoiceItem.invoice"
-                    class="info-icon">info</mat-icon>
+                <td class="mat-mdc-cell mdc-data-table__cell  ">
+                  <span class="invoice-item">{{invoiceItem.label}} <mat-icon color="accent" inline="true"
+                      [matTooltip]="invoiceItem.isGifted?'Ne plus offrir cette ligne de facturation':'Offrir cette ligne de facturation'"
+                      *ngIf="editMode && !getLetteringDate(invoiceItem.invoice)" class="info-icon pointer"
+                      (click)="toggleIsGifTed(invoiceItem)">redeem</mat-icon>
+                    <mat-icon color="accent" inline="true"
+                      matTooltip="Veuillez enregistrer pour pouvoir modifier le prix appliqué"
+                      *ngIf="editMode && invoiceItem.billingItem.billingType.canOverridePrice==true && !invoiceItem.id && !invoiceItem.invoice"
+                      class="info-icon">info</mat-icon></span>
                 </td>
                 <td class="mat-mdc-cell mdc-data-table__cell  td-price "
                   *ngIf="!editMode || invoiceItem.billingItem.billingType.canOverridePrice==false || !invoiceItem.id || invoiceItem.invoice">
@@ -132,7 +132,7 @@
               <tr class="mat-mdc-row mdc-data-table__row "
                 *ngIf="invoiceItem.discountAmount && invoiceItem.discountAmount>0">
                 <td class="mat-mdc-cell mdc-data-table__cell ">
-                  Remise
+                  <span class="invoice-item">Remise</span>
                 </td>
                 <td class="mat-mdc-cell mdc-data-table__cell  td-price remise ">
                   - {{invoiceItem.discountAmount|number}} €
