--- a/client/src/app/modules/quotation/components/announcement/announcement.component.html
+++ b/client/src/app/modules/quotation/components/announcement/announcement.component.html
@@ -261,5 +261,8 @@
     <mat-tab label="Historique" *ngIf="announcement && announcement.id">
       <history [entity]="announcement" [entityType]="ANNOUNCEMENT_ENTITY_TYPE"></history>
     </mat-tab>
+    <mat-tab label="Débours" *ngIf=" announcement && announcement.id && canAddNewInvoice()">
+      <debour [provision]="provision"></debour>
+    </mat-tab>
   </mat-tab-group>
 </form>
