--- a/client/src/app/modules/quotation/components/formalite/formalite.component.html
+++ b/client/src/app/modules/quotation/components/formalite/formalite.component.html
@@ -54,5 +54,8 @@
     <mat-tab label="Historique" *ngIf="formalite && formalite.id">
       <history [entity]="formalite" [entityType]="FORMALITE_ENTITY_TYPE"></history>
     </mat-tab>
+    <mat-tab label="Débours" *ngIf="formalite && formalite.id && canAddNewInvoice()">
+      <debour [provision]="provision"></debour>
+    </mat-tab>
   </mat-tab-group>
 </form>
