--- a/client/src/app/routing/search/search.component.html
+++ b/client/src/app/routing/search/search.component.html
@@ -42,9 +42,10 @@
                     *ngFor="let entity of getEntitiesForTab(RESPONSABLE_ENTITY_TYPE)"
                     (click)="openEntity($event, entity)" (auxclick)="openEntity($event, entity)">
                     <mat-card-header>
-                      <mat-card-title>{{entity.text.firstname}} {{entity.text.lastname}}
-                        ({{entity.text.tiers.denomination?entity.text.tiers.denomination:entity.text.tiers.firstname+"
-                        "+entity.text.tiers.lastname}})
+                      <mat-card-title [ngStyle]="{'color': entity.text.isActive ? 'black' : 'red'}">
+                        {{entity.text.firstname}} {{entity.text.lastname}}
+                        ({{entity.text.tiers.denomination ? entity.text.tiers.denomination : entity.text.tiers.firstname + " " + entity.text.tiers.lastname}})
+                        <span *ngIf="!entity.text.isActive" style="color: red;">INACTIF</span>
                       </mat-card-title>
                       <mat-card-subtitle *ngIf="entity.text.salesEmployee">Commercial
                         {{entity.text.salesEmployee.firstname}}
