--- a/client/src/app/routing/search/search.component.html
+++ b/client/src/app/routing/search/search.component.html
@@ -73,10 +73,8 @@
                           *ngIf="entity.text.responsable!=null">{{entity.text.responsable.firstname}}
                           {{entity.text.responsable.lastname}}</span> - créé le {{entity.text.createdDate|
                         date:'dd/MM/yyyy à HH:mm'}}<br>Commercial <span
-                          *ngIf="entity.text.tiers!=null">{{entity.text.tiers.salesEmployee.firstname}}
-                          {{entity.text.tiers.salesEmployee.lastname}}</span><span
-                          *ngIf="entity.text.responsable!=null">{{entity.text.responsable.salesEmployee.firstname}}
-                          {{entity.text.responsable.salesEmployee.lastname}}</span>
+                          *ngIf="entity.text.assignedTo!=null">{{entity.text.assignedTo.firstname}}
+                          {{entity.text.assignedTo.lastname}}</span>
                       </mat-card-subtitle>
                       <mat-icon color="accent" class="mat-card-icon">request_quote</mat-icon>
                     </mat-card-header>
@@ -96,10 +94,8 @@
                           *ngIf="entity.text.responsable!=null">{{entity.text.responsable.firstname}}
                           {{entity.text.responsable.lastname}}</span> - créé le {{entity.text.createdDate|
                         date:'dd/MM/yyyy à HH:mm'}}<br>Commercial <span
-                          *ngIf="entity.text.tiers!=null">{{entity.text.tiers.salesEmployee.firstname}}
-                          {{entity.text.tiers.salesEmployee.lastname}}</span><span
-                          *ngIf="entity.text.responsable!=null">{{entity.text.responsable.salesEmployee.firstname}}
-                          {{entity.text.responsable.salesEmployee.lastname}}</span>
+                          *ngIf="entity.text.assignedTo!=null">{{entity.text.assignedTo.firstname}}
+                          {{entity.text.assignedTo.lastname}}</span>
                       </mat-card-subtitle>
                       <mat-icon color="accent" class="mat-card-icon">request_quote</mat-icon>
                     </mat-card-header>
