--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -1270,18 +1270,16 @@
           </tr>
           <tr>
             <td>
-              <autocomplete-principal-accounting-account [(model)]="constant.principalAccountingAccountLost"
-                [form]="constantForm" propertyName="principalAccountingAccountLost" [isMandatory]="true"
-                label="Compte comptable principal - Pertes"
-                [isDisabled]="!editMode"></autocomplete-principal-accounting-account>
+              <autocomplete-accounting-account [(model)]="constant.accountingAccountLost" [form]="constantForm"
+                propertyName="principalAccountingAccountLost" [isMandatory]="true"
+                label="Compte comptable principal - Pertes" [isDisabled]="!editMode"></autocomplete-accounting-account>
             </td>
           </tr>
           <tr>
             <td>
-              <autocomplete-principal-accounting-account [(model)]="constant.principalAccountingAccountProfit"
-                [form]="constantForm" propertyName="principalAccountingAccountProfit" [isMandatory]="true"
-                label="Compte comptable principal - Profit"
-                [isDisabled]="!editMode"></autocomplete-principal-accounting-account>
+              <autocomplete-accounting-account [(model)]="constant.accountingAccountProfit" [form]="constantForm"
+                propertyName="principalAccountingAccountProfit" [isMandatory]="true"
+                label="Compte comptable principal - Profit" [isDisabled]="!editMode"></autocomplete-accounting-account>
             </td>
           </tr>
           <tr>
