--- a/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
+++ b/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
@@ -39,13 +39,14 @@
                   <td>
                     <generic-input [(model)]="billingDocument.billingLabel" label="Libellé"
                       (onFormChange)="updateAdressing($event)" [form]="quotationManagementForm"
-                      propertyName="billingLabel" [isMandatory]="true" [isDisabled]="!editMode"></generic-input>
+                      propertyName="billingLabel" [isMandatory]="true" [maxLength]="200"
+                      [isDisabled]="!editMode"></generic-input>
                   </td>
                   <td>
                     <generic-input [(model)]="billingDocument.billingAddress" label="Adresse"
                       (onFormChange)="updateAdressing($event)" [form]="quotationManagementForm"
                       propertyName="billingAddress" [isMandatory]="true" [isDisabled]="!editMode"
-                      [maxLength]="100"></generic-input>
+                      [maxLength]="200"></generic-input>
                   </td>
                   <td>
                     <autocomplete-postal-code [(model)]="billingDocument.billingPostalCode"
