EVO - Abandon commande : obliger à remplir un champ pour en connaitre la cause

--- a/client/src/app/modules/quotation/components/abandon-reason-inquiry-dialog/abandon-reason-inquiry-dialog.html
+++ b/client/src/app/modules/quotation/components/abandon-reason-inquiry-dialog/abandon-reason-inquiry-dialog.html
@@ -4,7 +4,7 @@
   <p>Veuillez indiquer ci-dessous la raison de l'abandon de la commande :</p>
         <tr>
           <td>
-            <select-abandon-reason [(model)]="reason.label" label="Raison Abandon"
+            <select-abandon-reason [(model)]="reason" label="Processus d'Abandon : Remplissage pour Identification de la Cause"
             [form]="reasonTypeForm" propertyName="label" [isMandatory]="true" [isDisabled]="false"></select-abandon-reason>
           </td>
         </tr>
